fix overflow in preformatted code

--- a/css/main.sass
+++ b/css/main.sass
@@ -46,3 +46,9 @@ a:visited
 	-webkit-animation-delay: .8s
 	-moz-animation-delay: .8s
 	animation-delay: .8s
+
+// Code
+
+.post-content pre
+	overflow-x: auto
+	padding: 2em 1em
